@@ -3,6 +3,7 @@
  <object name="quickupload_properties" meta_type="Plone Property Sheet">
   <property name="title">Quick Upload properties</property>
   <property name="use_flashupload" type="boolean">False</property>
+  <property name="use_flash_as_fallback" type="boolean">False</property>
   <property name="auto_upload" type="boolean">False</property>
   <property name="fill_titles" type="boolean">True</property>
   <property name="fill_descriptions" type="boolean">False</property>
